--- a/todo-old/report/templates/Protokoll.jrxml
+++ b/todo-old/report/templates/Protokoll.jrxml
@@ -4,7 +4,7 @@
 	<property name="ireport.encoding" value="UTF-8"/>
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="149"/>
 	<import value="net.sf.jasperreports.engine.*"/>
 	<import value="java.util.*"/>
 	<import value="net.sf.jasperreports.engine.data.*"/>
@@ -31,7 +31,7 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="218" splitType="Stretch">
+		<band height="218" splitType="Prevent">
 			<staticText>
 				<reportElement key="staticText-1" x="4" y="9" width="64" height="20"/>
 				<box>
@@ -46,7 +46,7 @@
 				<text><![CDATA[Protokoll: ]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-2" x="194" y="9" width="64" height="20"/>
+				<reportElement key="staticText-2" x="203" y="9" width="64" height="20"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -72,7 +72,7 @@
 				<text><![CDATA[Protokollant: ]]></text>
 			</staticText>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
-				<reportElement key="staticText-2" x="70" y="9" width="100" height="20"/>
+				<reportElement key="staticText-2" x="70" y="9" width="124" height="20"/>
 				<box leftPadding="2">
 					<topPen lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineStyle="Solid" lineColor="#000000"/>
@@ -85,7 +85,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{SitzName}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField-2" x="260" y="9" width="99" height="20"/>
+				<reportElement key="textField-2" x="269" y="9" width="99" height="20"/>
 				<box leftPadding="2">
 					<topPen lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineStyle="Solid" lineColor="#000000"/>
@@ -98,7 +98,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{Datum}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
-				<reportElement key="textField-2" x="70" y="53" width="100" height="20"/>
+				<reportElement key="textField-2" x="70" y="53" width="124" height="20"/>
 				<box leftPadding="2">
 					<topPen lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineStyle="Solid" lineColor="#000000"/>
@@ -124,7 +124,7 @@
 				<text><![CDATA[Ort:]]></text>
 			</staticText>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
-				<reportElement key="staticText-6" x="70" y="31" width="100" height="20"/>
+				<reportElement key="staticText-6" x="70" y="31" width="124" height="20"/>
 				<box leftPadding="2">
 					<topPen lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineStyle="Solid" lineColor="#000000"/>
@@ -188,7 +188,7 @@
 				<text><![CDATA[Teilnehmer:]]></text>
 			</staticText>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement key="textField-6" x="271" y="106" width="259" height="39"/>
+				<reportElement key="textField-6" x="271" y="101" width="259" height="45"/>
 				<box leftPadding="2">
 					<topPen lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineStyle="Solid" lineColor="#000000"/>
@@ -214,7 +214,7 @@
 				<text><![CDATA[Sitzungs-Protokoll]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-19" positionType="Float" x="271" y="150" width="101" height="20"/>
+				<reportElement key="staticText-19" positionType="Float" x="271" y="146" width="101" height="20"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -227,7 +227,7 @@
 				<text><![CDATA[Teilnehmer:]]></text>
 			</staticText>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement key="textField-16" positionType="Float" x="271" y="174" width="259" height="39"/>
+				<reportElement key="textField-16" positionType="Float" x="271" y="165" width="259" height="48"/>
 				<box leftPadding="2">
 					<topPen lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineStyle="Solid" lineColor="#000000"/>
@@ -240,7 +240,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{Sonstige}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="5" y="107" width="255" height="106"/>
+				<reportElement x="5" y="101" width="255" height="112"/>
 				<textElement>
 					<font fontName="Tahoma" size="11"/>
 				</textElement>
@@ -255,7 +255,7 @@
 		<band height="19" splitType="Stretch"/>
 	</columnHeader>
 	<detail>
-		<band height="250" splitType="Stretch">
+		<band height="250" splitType="Prevent">
 			<rectangle>
 				<reportElement key="rectangle-1" positionType="Float" stretchType="RelativeToBandHeight" mode="Transparent" x="0" y="7" width="534" height="235"/>
 			</rectangle>
@@ -442,7 +442,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{Wiedervorlagedatum}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement key="staticText-16" positionType="Float" x="5" y="120" width="253" height="17"/>
+				<reportElement key="staticText-16" positionType="Float" x="5" y="119" width="253" height="17"/>
 				<box>
 					<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
@@ -455,7 +455,7 @@
 				<text><![CDATA[Verantwortliche/r:]]></text>
 			</staticText>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
-				<reportElement key="textField-14" positionType="Float" x="5" y="137" width="253" height="20"/>
+				<reportElement key="textField-14" positionType="Float" x="5" y="136" width="253" height="20"/>
 				<box leftPadding="2">
 					<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
