--- a/todo-old/report/templates/ProtokollKurz.jrxml
+++ b/todo-old/report/templates/ProtokollKurz.jrxml
@@ -3,7 +3,7 @@
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="179"/>
+	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<import value="net.sf.jasperreports.engine.*"/>
 	<import value="java.util.*"/>
@@ -12,7 +12,8 @@
 	<parameter name="SitzName" class="java.lang.String"/>
 	<parameter name="SitzOrt" class="java.lang.String"/>
 	<parameter name="IMAGE" class="java.lang.String"/>
-	<field name="Thema" class="java.lang.String"/>
+	<parameter name="SitzParticipiants" class="java.lang.String"/>
+	<field name="TOP" class="java.lang.String"/>
 	<field name="Verantwortliche" class="java.lang.String"/>
 	<field name="Wiedervorlagedatum" class="java.lang.String"/>
 	<field name="Inhalt" class="java.lang.String"/>
@@ -20,7 +21,7 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="119" splitType="Stretch">
+		<band height="129" splitType="Stretch">
 			<image scaleImage="RetainShape">
 				<reportElement key="image-1" x="624" y="4" width="158" height="36" forecolor="#FFFFFF"/>
 				<box>
@@ -48,7 +49,7 @@
 				<text><![CDATA[Sitzungsprotokoll kurz]]></text>
 			</staticText>
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField-1" x="70" y="4" width="207" height="20"/>
+				<reportElement key="textField-1" x="70" y="4" width="431" height="20"/>
 				<box leftPadding="2">
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -87,7 +88,7 @@
 				<text><![CDATA[Sitzung:]]></text>
 			</staticText>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
-				<reportElement key="textField-2" x="71" y="26" width="206" height="20"/>
+				<reportElement key="textField-2" x="71" y="26" width="430" height="20"/>
 				<box leftPadding="2">
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -100,7 +101,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{SitzName}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
-				<reportElement key="textField-2" x="71" y="48" width="206" height="20"/>
+				<reportElement key="textField-2" x="71" y="48" width="430" height="20"/>
 				<box leftPadding="2">
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -125,12 +126,38 @@
 				</textElement>
 				<text><![CDATA[Ort:]]></text>
 			</staticText>
+			<staticText>
+				<reportElement key="staticText-2" x="5" y="70" width="64" height="20"/>
+				<box leftPadding="2">
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement>
+					<font fontName="Tahoma" size="11"/>
+				</textElement>
+				<text><![CDATA[Teilnehmer:]]></text>
+			</staticText>
+			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
+				<reportElement key="textField-2" x="71" y="70" width="430" height="43"/>
+				<box leftPadding="2">
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement>
+					<font fontName="Tahoma" size="11"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{SitzParticipiants}]]></textFieldExpression>
+			</textField>
 		</band>
 	</title>
 	<pageHeader>
 		<band height="26" splitType="Stretch">
 			<staticText>
-				<reportElement key="staticText-8" x="4" y="2" width="99" height="17"/>
+				<reportElement key="staticText-8" x="4" y="2" width="142" height="17"/>
 				<box>
 					<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
@@ -140,10 +167,10 @@
 				<textElement>
 					<font fontName="Tahoma" size="11" isBold="true"/>
 				</textElement>
-				<text><![CDATA[ Thema:]]></text>
+				<text><![CDATA[ TOP:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-11" x="103" y="2" width="111" height="17"/>
+				<reportElement key="staticText-11" x="146" y="2" width="131" height="17"/>
 				<box>
 					<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
@@ -156,7 +183,7 @@
 				<text><![CDATA[ Verantwortliche/r:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-10" x="220" y="2" width="74" height="17"/>
+				<reportElement key="staticText-10" x="277" y="2" width="87" height="17"/>
 				<box>
 					<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
@@ -169,7 +196,7 @@
 				<text><![CDATA[W.-vorlage]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-9" x="299" y="2" width="481" height="17"/>
+				<reportElement key="staticText-9" x="364" y="2" width="416" height="17"/>
 				<box>
 					<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
@@ -190,9 +217,9 @@
 		<band splitType="Stretch"/>
 	</columnHeader>
 	<detail>
-		<band height="18" splitType="Stretch">
+		<band height="18" splitType="Immediate">
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement key="textField-8" x="4" y="2" width="99" height="15"/>
+				<reportElement key="textField-8" stretchType="RelativeToTallestObject" x="4" y="2" width="142" height="15"/>
 				<box leftPadding="2">
 					<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
@@ -202,10 +229,10 @@
 				<textElement>
 					<font fontName="Tahoma" size="11"/>
 				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{Thema}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{TOP}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement key="textField-9" x="299" y="2" width="481" height="15"/>
+				<reportElement key="textField-9" stretchType="RelativeToTallestObject" x="364" y="2" width="416" height="15"/>
 				<box leftPadding="2">
 					<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
@@ -218,7 +245,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{Inhalt}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
-				<reportElement key="textField-10" x="220" y="2" width="74" height="15"/>
+				<reportElement key="textField-10" stretchType="RelativeToTallestObject" x="277" y="2" width="87" height="15"/>
 				<box leftPadding="2">
 					<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
@@ -231,7 +258,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{Wiedervorlagedatum}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
-				<reportElement key="textField-11" x="103" y="2" width="111" height="15"/>
+				<reportElement key="textField-11" stretchType="RelativeToTallestObject" x="146" y="2" width="131" height="15"/>
 				<box leftPadding="2">
 					<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
