--- a/todo-old/report/templates/Themenliste.jrxml
+++ b/todo-old/report/templates/Themenliste.jrxml
@@ -4,7 +4,7 @@
 	<property name="ireport.encoding" value="UTF-8"/>
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="98"/>
 	<import value="net.sf.jasperreports.engine.*"/>
 	<import value="java.util.*"/>
 	<import value="net.sf.jasperreports.engine.data.*"/>
@@ -115,7 +115,7 @@
 		<band height="4" splitType="Stretch"/>
 	</columnHeader>
 	<detail>
-		<band height="280" splitType="Stretch">
+		<band height="280" splitType="Prevent">
 			<rectangle>
 				<reportElement key="rectangle-1" stretchType="RelativeToBandHeight" mode="Transparent" x="1" y="22" width="534" height="254"/>
 			</rectangle>
